# mine-storage-console

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  MEMORY.md  README.en.md  README.md  README.pt-BR.md  code.html  openapi.json  pyproject.toml
mine_backend/: config.py  main.py
mine_backend/api/: exception_handlers.py  router.py
mine_backend/api/dependencies/: auth.py  authorization.py  cache.py
mine_backend/api/routers/: admin.py  admin_notifications.py  auth.py  buckets.py  credentials.py  groups.py  me.py  objects.py  policies.py  quotas.py  search.py  user.py
mine_backend/api/schemas/: admin_notifications.py  auth.py  buckets.py  credentials.py  group.py  (+5 more)
mine_backend/core/: authorization.py  cache.py  crypto.py  keycloak.py  logging_config.py  redis.py  security.py  utils.py
mine_backend/exceptions/: application.py  base.py
mine_backend/mcp/: context.py  server.py
mine_backend/services/: admin_notification_service.py  auth_service.py  authorization_service.py  bucket_service.py  credential_service.py  group_service.py  lifecycle_validator.py  object_service.py  policy_service.py  policy_validator.py  search_service.py  session_service.py  sts_service.py  user_service.py
mine_ui/: README.md  angular.json  package-lock.json  package.json
mine_ui/public/: config.json
mine_ui/src/: index.html  main.ts  styles.scss
tests/: conftest.py  test_bucket_service.py  test_credential_service.py  test_crypto.py  test_exception_handlers.py  test_exceptions.py  test_object_service.py  test_security.py  test_session_service.py  test_user_service.py  test_utils.py
(+61 files in other folders)
